RESOLVED FIXED36231
[Chromium] PlatformTouchEventBuilder incorrectly resizes touch point vector.
https://bugs.webkit.org/show_bug.cgi?id=36231
Summary [Chromium] PlatformTouchEventBuilder incorrectly resizes touch point vector.
Garret Kelly
Reported 2010-03-17 11:23:53 PDT
The PlatformTouchEventBuilder resizes the touch point array before appending points to it, which is incredibly wrong. This was a vestige of how touch event conversion used to work.
Attachments
Initial patch (1.29 KB, patch)
2010-03-17 11:25 PDT, Garret Kelly
no flags
Garret Kelly
Comment 1 2010-03-17 11:25:45 PDT
Created attachment 50927 [details] Initial patch
WebKit Commit Bot
Comment 2 2010-03-17 20:07:57 PDT
Comment on attachment 50927 [details] Initial patch Clearing flags on attachment: 50927 Committed r56144: <http://trac.webkit.org/changeset/56144>
WebKit Commit Bot
Comment 3 2010-03-17 20:08:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.