2010-03-17  Garret Kelly  <gdk@chromium.org>

Reviewed by Darin Fisher.

        PlatformTouchEventBuilder should not be resizing the touch point
        array before appending touch points to it.
        https://bugs.webkit.org/show_bug.cgi?id=36231

        * src/WebInputEventConversion.cpp:
        (WebKit::PlatformTouchEventBuilder::PlatformTouchEventBuilder):

Canonical link: https://commits.webkit.org/47438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56144 268f45cc-cd09-0410-ab3c-d52691b4dbfc